# niri

./: CUSTOM-README.md  Cargo.toml  niri-vnc-setup-complete.md  niri-wayland-setup.md  test-niri-wayland.sh
bevy-niri-integration/: Cargo.toml  README.md
bevy-niri-integration/benches/: performance_tests.rs
bevy-niri-integration/examples/: config_example.rs  multi_screen_display.rs  simple_capture.rs  wayland_test.rs
bevy-niri-integration/src/: adaptive.rs  config.rs  display.rs  dma_integration.rs  error.rs  lib.rs  plugin.rs  utils.rs  wayland_client.rs
bevy-niri-integration/tests/: integration_tests.rs
configs/: niri-config-with-xwayland-satellite.kdl
configs/remote-niri-backup/: config.kdl  config.kdl.backup-1753549367  config.kdl.backup-1753654663  config.kdl.backup-final  config.kdl.backup-xwayland  config.kdl.backup-xwayland-satellite  config.kdl.backup2  config.kdl.broken  config.kdl.with-satellite
docs/: BEVY-NIRI-CURRENT-STATUS.md  BEVY-NIRI-DEVELOPMENT-GUIDE.md  BEVY-NIRI-DEVELOPMENT-ROADMAP.md  BEVY-NIRI-FINDINGS-SUMMARY.md  BEVY-NIRI-GELISTIRME-PLANI-TR.md  BEVY-NIRI-INTEGRATION-PLAN.md  BEVY-NIRI-KALAN-ISLER-TR.md  BEVY-NIRI-MEVCUT-DURUM-TR.md  BEVY-NIRI-PROBLEMS-AND-SOLUTIONS.md  BEVY-NIRI-SORUNLAR-COZUMLER-TR.md  BEVY-NIRI-TECHNICAL-ARCHITECTURE.md  DEVELOPER_GUIDE.md  README.md  REMOTE_INSTALLATION_GUIDE.md  SUNSHINE_INTEGRATION_GUIDE.md  TROUBLESHOOTING_GUIDE.md  TURKISH_INSTALLATION_GUIDE.md
examples/: bevy_integration_test.rs
src/: lib.rs  niri.rs
src/bevy_integration/: mod.rs  renderer.rs  texture_manager.rs
src/input/: mod.rs
(+2 files in other folders)
