[package]
name = "bevy-niri-integration"
version = "0.1.0"
edition = "2021"
description = "Bevy integration for Niri Wayland compositor with multi-screen support"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]
license = "GPL-3.0-or-later"

[dependencies]
bevy = "0.14"
wayland-client = "0.31"
wayland-protocols-wlr = "0.2"
smithay-client-toolkit = "0.18"
gbm = "0.15"
drm = "0.11"
wgpu = "0.20"
tracing = "0.1"
metrics = "0.23"
niri-config = { path = "../niri-config" }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "performance_tests"
harness = false
